--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,56 @@
+/*Header Section*/
+.navbar-brand img {
+    max-width: 100%;
+    height: auto;
+    height: 3vw; 
+}
 
+/*Home Section*/
+#home {
+    position: relative;
+    color: black;
+    height: 50vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: none;
+}
+
+#home::before {
+    content: "";
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    right: 15%;
+    bottom: 5%;
+    background-image: url('./images/michael-milverton-Le4yqbCMoJo-unsplash.jpg');
+    background-size: cover;
+    background-position: center;
+    border-radius: 20px;
+    z-index: -1;
+}
+
+#home h1 {
+    text-align: left;
+    font-weight: bold;
+    font-size: 5vw;
+    padding-left: 20vw; 
+}
+
+#home h3 {
+    text-align: left;
+    font-size: 1.5vw;
+    padding-left: 20vw; 
+}
+
+.button-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 5vw;
+}
+
+#home button {
+    align-self: flex-start;
+}
