--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+/*Global Styles*/
+h3 {
+    text-align: left;
+    font-size: 1.5vw;
+    padding-left: 20vw; 
+}
+
+p {
+    text-align: left;
+    font-size: 0.83vw;
+    padding-left: 20vw;
+    max-width: 80vw;
+}
+
 /*Header Section*/
 .navbar-brand img {
     max-width: 100%;
@@ -38,12 +52,6 @@
     padding-left: 20vw; 
 }
 
-#home h3 {
-    text-align: left;
-    font-size: 1.5vw;
-    padding-left: 20vw; 
-}
-
 .button-wrapper {
     display: flex;
     justify-content: center;
@@ -53,4 +61,13 @@
 
 #home button {
     align-self: flex-start;
+}
+
+/*Intro Section*/
+#intro {
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+}
+#intro h3, p {
+    color: white;
 }
