--- a/styles_2.css
+++ b/styles_2.css
@@ -43,11 +43,11 @@ p {
   }
   
   #header .navbar {
-    padding: 10px 0; /* Adjust padding as needed */
+    padding: 30px 0; /* Adjust padding as needed */
   }
   
   #header .navbar-brand img {
-    max-height: 40px; /* Adjust logo size as needed */
+    max-height: 40px; 
   }
   
   #header .navbar-nav {
