--- a/styles_2.css
+++ b/styles_2.css
@@ -11,7 +11,7 @@ h1 {
 
 h3 {
     font-size: 2em; 
-    font-weight: 500; 
+    font-weight: 600; 
     margin-bottom: 20px; 
 }
 
@@ -344,6 +344,14 @@ p {
       margin-bottom: 20px;
     }
   }
+
+  .contact-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    align-self: stretch;
+}
   
   footer {
     grid-area: footer;
